GNOME Bugzilla – Bug 682384
really crappy error dialog when failing to connect anonymously to a share
Last modified: 2012-08-24 12:17:49 UTC
Created attachment 222061 [details] screenshot When I try to connect anonymously to my NAS share I get the attached dialog. Ideally it wouldn't allow me to try it if it isn't going to work but even still we can do better with the error.
<mccann> in what cases does gdbus make error strings like this? http://bugzilla-attachments.gnome.org/attachment.cgi?id=222061 <davidz> when someone forgets to call http://developer.gnome.org/gio/unstable/gio-GDBusError.html#g-dbus-error-strip-remote-error <davidz> it's an interesting question where these calls should be inserted.... <mccann> ah! <mccann> I think nautilus is just getting them from gio <davidz> I think it's probably a problem with the proxy volume monitor <davidz> ask tomas when he's back from vacation? (I'd file a bug against gvfs now ... copy/paste this IRC conversation ... please cc me) <davidz> (tomas recently ported the proxy volume monitor from libdbus to gdbus - bug could be introduced there) <davidz> so... the way I think it works is that the AFP backend generates a GError with (domain=g-io-error, code=15, message = "AFP server DiskStation doesn't support anonymous login") <davidz> which is correct <davidz> we shove that over D-Bus and GDBus finds that g-io-error is not registered so it inserts extra information so the other end can recover the "(domain=g-io-error, code=15" part <davidz> we just need to strip that extra information... it's that simple I think * davidz must have overlooked this when reviewing tomas' patches <davidz> mccann: anyway, I would file a bug against gvfs for this
Created attachment 222192 [details] [review] Strip off dbus stuff from error message before returning it