Strip dbus error strings from GError after all dbus calls.

https://bugzilla.gnome.org/show_bug.cgi?id=682384