daemon/gvfsjobenumerate.c
@@ -139,6 +139,7 @@ send_infos_cb (GVfsDBusEnumerator *proxy,
   gvfs_dbus_enumerator_call_got_info_finish (proxy, res, &error);
   if (error != NULL)
     {
+      g_dbus_error_strip_remote_error (error);
       g_warning ("send_infos_cb: %s (%s, %d)\n", error->message, g_quark_to_string (error->domain), error->code);
       g_error_free (error);
     }
@@ -227,6 +228,7 @@ send_done_cb (GVfsDBusEnumerator *proxy,
   gvfs_dbus_enumerator_call_done_finish (proxy, res, &error);
   if (error != NULL)
     {
+      g_dbus_error_strip_remote_error (error);
       g_warning ("send_done_cb: %s (%s, %d)\n", error->message, g_quark_to_string (error->domain), error->code);
       g_error_free (error);
     }
