daemon/gvfsjobunmount.c
@@ -283,6 +283,7 @@ unregister_mount_callback (GVfsDBusMountTracker *proxy,
                                                               res,
                                                               &error))
     {
+      g_dbus_error_strip_remote_error (error);
       g_warning ("Error unregistering mount: %s (%s, %d)\n",
                   error->message, g_quark_to_string (error->domain), error->code);
       g_error_free (error);
