daemon/gvfsmonitor.c
@@ -297,6 +297,7 @@ changed_cb (GVfsDBusMonitorClient *proxy,
 
   if (! gvfs_dbus_monitor_client_call_changed_finish (proxy, res, &error))
     {
+      g_dbus_error_strip_remote_error (error);
       g_printerr ("Error calling org.gtk.vfs.MonitorClient.Changed(): %s (%s, %d)\n",
                   error->message, g_quark_to_string (error->domain), error->code);
       g_error_free (error);
